G29 image (dds) added and displayed

--- a/UWPSamples/System/RawGameControllerUWP/RawGameControllerUWP.vcxproj
+++ b/UWPSamples/System/RawGameControllerUWP/RawGameControllerUWP.vcxproj
@@ -322,6 +322,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\Media\Textures\gamepad.dds" />
+    <Image Include="..\..\..\Media\Textures\lgg29.dds" />
     <Image Include="Assets\Logo.png" />
     <Image Include="Assets\SmallLogo.png" />
     <Image Include="Assets\SplashScreen.png" />
